appId: com.stringsaeed.moneymanagement.next
name: Create an account
tags:
  - core
---
- runFlow: ../subflows/launch-guest.yaml
- runFlow: ../subflows/create-account.yaml
- tapOn: "Ledger"
- tapOn: "Open Accounts"
- assertVisible: "Maestro Checking"
